added more wrappers for sale section

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
           </article>
         </div>
 
-        <div class="page-main__review-button-prev" aria-label="Предыдущий слайд">&lt;</div>
-        <div class="page-main__review-button-next" aria-label="Следующий слайд">&gt;</div>
+        <div class="page-main__review-button-prev" aria-label="Предыдущий слайд"></div>
+        <div class="page-main__review-button-next" aria-label="Следующий слайд"></div>
         <div class="page-main__review-slider-pagination"></div>
 
       </section>
@@ -217,15 +217,19 @@
             <li class="page-main__sale-tab-content page-main__sale-tab-content_active ">
                 <ul class="page-main__sale-content-list">
 
-                  <li class="page-main__sale-content-li">
-                    <article class="page-main__sale-content-product" >
+                  <li class="page-main__sale-content-li ">
+                    <article class="page-main__sale-content-product page-main__sale-content-product_active" >
                       <a class="page-main__sale-product-link" href="#">
-                        <h3 class="page-main__sale-product-name">Стул "Карамель"</h3>
-                        <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$195</span><span class="page-main__sale-price-old">$245</span></p>
-                        <button class="page-main__sale-product-button" type="button">Купить</button>
-                        <div class="page-main__sale-wrap-img">
-                          <img class="page-main__sale-product-img" src="img/chair-caramel-desktop.jpg" alt="Стул Карамель">
+                        <div class="page-main__sale-product-info">
+                          <div class="page-main__sale-info-text">
+                            <h3 class="page-main__sale-product-name">Стул "Карамель"</h3>
+                            <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$195</span><span class="page-main__sale-price-old">$245</span></p>
+                          </div>
+                          <div class="page-main__sale-wrap-img">
+                            <img class="page-main__sale-product-img" src="img/chair-caramel-desktop.jpg" alt="Стул Карамель">
+                          </div>
                         </div>
+                        <button class="page-main__sale-product-button" type="button">Купить</button>
                       </a>
                     </article>
                   </li>
@@ -233,12 +237,16 @@
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
                       <a class="page-main__sale-product-link" href="#">
-                        <h3 class="page-main__sale-product-name">Стул "Облако"</h3>
-                        <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$200</span><span class="page-main__sale-price-old">$250</span></p>
-                        <button class="page-main__sale-product-button" type="button">Купить</button>
-                        <div class="page-main__sale-wrap-img">
-                          <img class="page-main__sale-product-img" src="img/chair-cloud-desktop.jpg" alt="Стул Облако">
+                        <div class="page-main__sale-product-info">
+                          <div class="page-main__sale-info-text">
+                            <h3 class="page-main__sale-product-name">Стул "Облако"</h3>
+                            <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$200</span><span class="page-main__sale-price-old">$250</span></p>
+                          </div>
+                          <div class="page-main__sale-wrap-img">
+                            <img class="page-main__sale-product-img" src="img/chair-cloud-desktop.jpg" alt="Стул Облако">
+                          </div>
                         </div>
+                        <button class="page-main__sale-product-button" type="button">Купить</button>
                       </a>
                     </article>
                   </li>
@@ -246,12 +254,16 @@
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
                       <a class="page-main__sale-product-link" href="#">
-                        <h3 class="page-main__sale-product-name">Стул "Сова"</h3>
-                        <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$240</span><span class="page-main__sale-price-old">$260</span></p>
-                        <button class="page-main__sale-product-button" type="button">Купить</button>
-                        <div class="page-main__sale-wrap-img">
-                          <img class="page-main__sale-product-img" src="img/chair-owl-desktop.jpg" alt="Стул Сова">
+                        <div class="page-main__sale-product-info">
+                          <div class="page-main__sale-info-text">
+                            <h3 class="page-main__sale-product-name">Стул "Сова"</h3>
+                            <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$240</span><span class="page-main__sale-price-old">$260</span></p>
+                          </div>
+                          <div class="page-main__sale-wrap-img">
+                            <img class="page-main__sale-product-img" src="img/chair-owl-desktop.jpg" alt="Стул Сова">
+                          </div>
                         </div>
+                        <button class="page-main__sale-product-button" type="button">Купить</button>
                       </a>
                     </article>
                   </li>
@@ -259,12 +271,16 @@
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
                       <a class="page-main__sale-product-link" href="#">
-                        <h3 class="page-main__sale-product-name">Стул "Мая"</h3>
-                        <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$280</span><span class="page-main__sale-price-old">$330</span></p>
-                        <button class="page-main__sale-product-button" type="button">Купить</button>
-                        <div class="page-main__sale-wrap-img">
-                          <img class="page-main__sale-product-img" src="img/chair-maya-desktop.jpg" alt="Стул Мая">
+                        <div class="page-main__sale-product-info">
+                          <div class="page-main__sale-info-text">
+                            <h3 class="page-main__sale-product-name">Стул "Мая"</h3>
+                            <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$280</span><span class="page-main__sale-price-old">$330</span></p>
+                          </div>
+                            <div class="page-main__sale-wrap-img">
+                              <img class="page-main__sale-product-img" src="img/chair-maya-desktop.jpg" alt="Стул Мая">
+                            </div>
                         </div>
+                        <button class="page-main__sale-product-button" type="button">Купить</button>
                       </a>
                     </article>
                   </li>
@@ -272,12 +288,16 @@
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
                       <a class="page-main__sale-product-link" href="#">
-                        <h3 class="page-main__sale-product-name">Стул "Месси"</h3>
-                        <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$280</span><span class="page-main__sale-price-old">$305</span></p>
-                        <button class="page-main__sale-product-button" type="button">Купить</button>
-                        <div class="page-main__sale-wrap-img">
-                          <img class="page-main__sale-product-img" src="img/chair-messy-desktop.jpg" alt="Стул Месси">
+                        <div class="page-main__sale-product-info">
+                          <div class="page-main__sale-info-text">
+                            <h3 class="page-main__sale-product-name">Стул "Месси"</h3>
+                            <p class="page-main__sale-product-price"><span class="page-main__sale-price-new">$280</span><span class="page-main__sale-price-old">$305</span></p>
+                          </div>
+                            <div class="page-main__sale-wrap-img">
+                              <img class="page-main__sale-product-img" src="img/chair-messy-desktop.jpg" alt="Стул Месси">
+                            </div>
                         </div>
+                        <button class="page-main__sale-product-button" type="button">Купить</button>
                       </a>
                     </article>
                   </li>
