got rid of extra active class in sale section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <ul class="page-main__sale-content-list">
 
                   <li class="page-main__sale-content-li ">
-                    <article class="page-main__sale-content-product page-main__sale-content-product_active" >
+                    <article class="page-main__sale-content-product" >
                       <a class="page-main__sale-product-link" href="#">
                         <div class="page-main__sale-product-info">
                           <div class="page-main__sale-info-text">
