removed span wrappers in address, added span wrapper for copyright

--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
         </ul>
       </nav>
       <address class="page-footer__address">
-        <span class="page-footer__tel"><a class="page-footer__tel-a" href="tel:+74952052814">+7(495) 205-28-14</a></span>
-        <span class="page-footer__mail"><a class="page-footer__mail-a" href="mailto:callium@gmail.com">callium@gmail.com</a></span>
+        <a class="page-footer__tel-a" href="tel:+74952052814">+7(495) 205-28-14</a>
+        <a class="page-footer__mail-a" href="mailto:callium@gmail.com">callium@gmail.com</a>
       </address>
-      <p class="page-footer__copyright">© 2018 «Callium» — Сайт по продаже дизайнерской мебели. Все права защищены.</p>
+      <p class="page-footer__copyright-wrapper"><span class="page-footer__copyright">© 2018 «Callium» — Сайт по продаже дизайнерской мебели. Все права защищены.</span></p>
     </footer>
   </body>
 </html>
