added script tag for js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preload" href="../fonts/playfair-display-v22-latin_cyrillic-700.woff2" as="font" crossorigin="anonymous">
     <link rel="stylesheet", href="css/normalize.css">
     <link rel="stylesheet", href="css/style.css">
+    <script async src="js/index.js"></script>
     <title>Дизайнерская мебель</title>
   </head>
 
@@ -207,9 +208,9 @@
       <section class="page-main__sale">
         <h3 class="page-main__sale-title">Последний шанс</h3>
         <ul class="page-main__sale-tabs">
-          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a page-main__sale-tab_active" href="#">Стулья</a></li>
-          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" href="#">Диваны</a></li>
-          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" href="#">Кресла</a></li>
+          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a page-main__sale-tab_active" >Стулья</a></li>
+          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" >Диваны</a></li>
+          <li class="page-main__sale-tab"><a class="page-main__sale-tab-a" >Кресла</a></li>
         </ul>
 
         <ul class="page-main__sale-tabs-contents">
@@ -305,10 +306,10 @@
                 </ul>
             </li>
             <li class="page-main__sale-tab-content">
-
+              <p class="page-main__sale-tab-empty">Нет товаров данной категории</p>
             </li>
             <li class="page-main__sale-tab-content">
-              
+              <p class="page-main__sale-tab-empty">Нет товаров данной категории</p>
             </li>
         </ul>
       </section>
