got rid of extra slide title numbering

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="page-main__product-slider">
           <article class="page-main__product-slide" id="page-main__product-slide-1">
               <div class="page-main__product-info">
-                <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель1</h2>
+                <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
                 <h3 class="page-main__product-name">Кресло "Антиква"</h3>
                 <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
                 <button class="page-main__product-button" type="button">Купить</button>
@@ -57,7 +57,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-2">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель2</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -69,7 +69,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-3">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель3</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -81,7 +81,7 @@
   
           <article class="page-main__product-slide" id="page-main__product-slide-4">
             <div class="page-main__product-info">
-              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель4</h2>
+              <h2 class="page-main__product-type" aria-hidden="true">Дизайнерская мебель</h2>
               <h3 class="page-main__product-name">Кресло "Антиква"</h3>
               <p class="page-main__product-price-wrapper"><span class="page-main__product-price">$380</span><span class="page-main__product-price-sale">$240</span></p>
               <button class="page-main__product-button" type="button">Купить</button>
@@ -166,7 +166,7 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова1<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
@@ -175,7 +175,7 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова2<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
@@ -184,7 +184,7 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова3<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
@@ -193,7 +193,7 @@
             <div class="page-main__review-wrap-image">
               <img class="page-main__review-image" src="img/avatar.jpg" alt="Аватар автора отзыва">
             </div>
-            <cite class="page-main__review-author">Елена Новикова4<span class="page-main__review-author-status">студентка</span></cite>
+            <cite class="page-main__review-author">Елена Новикова<span class="page-main__review-author-status">студентка</span></cite>
             <blockquote class="page-main__review-quote">«Хочу поделиться своими впечатлениями по использованию дивана «Бродвей», заказывала в конце 2016 года. 
               Держится великолепно. Спасибо, большое сотрудникам этого чудесного магазина.»</blockquote>
           </article>
