Fixed bugs according to the W3C Markup Validation Service

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preload" href="../fonts/open-sans-v18-latin_cyrillic-600.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="../fonts/playfair-display-v22-latin_cyrillic-regular.woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="../fonts/playfair-display-v22-latin_cyrillic-700.woff2" as="font" crossorigin="anonymous">
-    <link rel="stylesheet", href="css/normalize.css">
-    <link rel="stylesheet", href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
     <script async src="js/index.js"></script>
     <title>Дизайнерская мебель</title>
   </head>
@@ -102,7 +102,7 @@
       </section>
 
       <section class="page-main__new">
-        <h2 class="page-main__new-title">Новинки</h3>
+        <h2 class="page-main__new-title">Новинки</h2>
         <ul class="page-main__new-list">
           <li class="page-main__new-item page-main__new-item-title"  >
             <span class="page-main__new-list-title" aria-hidden="true">Новинки</span>
@@ -199,8 +199,8 @@
           </article>
         </div>
 
-        <div class="page-main__review-button-prev" aria-label="Предыдущий слайд"></div>
-        <div class="page-main__review-button-next" aria-label="Следующий слайд"></div>
+        <div class="page-main__review-button-prev">Предыдущий слайд</div>
+        <div class="page-main__review-button-next">Следующий слайд</div>
         <div class="page-main__review-slider-pagination"></div>
 
       </section>
@@ -220,7 +220,6 @@
 
                   <li class="page-main__sale-content-li ">
                     <article class="page-main__sale-content-product" >
-                      <a class="page-main__sale-product-link" href="#">
                         <div class="page-main__sale-product-info">
                           <div class="page-main__sale-info-text">
                             <h3 class="page-main__sale-product-name">Стул "Карамель"</h3>
@@ -231,13 +230,11 @@
                           </div>
                         </div>
                         <button class="page-main__sale-product-button" type="button">Купить</button>
-                      </a>
                     </article>
                   </li>
 
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
-                      <a class="page-main__sale-product-link" href="#">
                         <div class="page-main__sale-product-info">
                           <div class="page-main__sale-info-text">
                             <h3 class="page-main__sale-product-name">Стул "Облако"</h3>
@@ -248,13 +245,11 @@
                           </div>
                         </div>
                         <button class="page-main__sale-product-button" type="button">Купить</button>
-                      </a>
                     </article>
                   </li>
 
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
-                      <a class="page-main__sale-product-link" href="#">
                         <div class="page-main__sale-product-info">
                           <div class="page-main__sale-info-text">
                             <h3 class="page-main__sale-product-name">Стул "Сова"</h3>
@@ -265,13 +260,11 @@
                           </div>
                         </div>
                         <button class="page-main__sale-product-button" type="button">Купить</button>
-                      </a>
                     </article>
                   </li>
 
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
-                      <a class="page-main__sale-product-link" href="#">
                         <div class="page-main__sale-product-info">
                           <div class="page-main__sale-info-text">
                             <h3 class="page-main__sale-product-name">Стул "Мая"</h3>
@@ -282,13 +275,11 @@
                             </div>
                         </div>
                         <button class="page-main__sale-product-button" type="button">Купить</button>
-                      </a>
                     </article>
                   </li>
 
                   <li class="page-main__sale-content-li">
                     <article class="page-main__sale-content-product" >
-                      <a class="page-main__sale-product-link" href="#">
                         <div class="page-main__sale-product-info">
                           <div class="page-main__sale-info-text">
                             <h3 class="page-main__sale-product-name">Стул "Месси"</h3>
@@ -299,7 +290,6 @@
                             </div>
                         </div>
                         <button class="page-main__sale-product-button" type="button">Купить</button>
-                      </a>
                     </article>
                   </li>
 
